--- a/index.html
+++ b/index.html
@@ -1,15 +1,27 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet">
-
-    <title>Portrait-Chinois</title>
-
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="styles.css" rel="stylesheet">
+  <title>Portrait-Chinois</title>
 </head>
+
 <body>
- <h1>Bonjour et bonvenue sur mon portrait chinois !</h1>
+  <nav>
+    <ul class="nav-links">
+      <li><a href="#">Acceuil</a></li>
+      <li><a href="#">Mes Thèmes</a></li>
+    </ul>
+    
+    <ul class="right-links">
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+
+
+
 </body>
+
 </html>
