--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     </ul>
   </nav>
 
+ <h1>Bonjour et bienvenue sur mon portrait chinois !</h1> 
+ <p>Je l'ai réalisé dans le cadre de ma première année de DUT MMi. Un portrait chinois consiste à décrire notre caractère et nos goûts au travers d'analogies avec des choses que l'on aime et qui nous inspirent.<p>
+
 
 
 
