ajout des themes

--- a/index.html
+++ b/index.html
@@ -14,19 +14,118 @@
       <li><a href="#">Acceuil</a></li>
       <li><a href="#">Mes Thèmes</a></li>
     </ul>
-    
+
     <ul class="right-links">
       <li><a href="#">Contact</a></li>
     </ul>
   </nav>
 
- <h1>Bonjour et bienvenue sur mon portrait chinois !</h1> 
- <p>Je l'ai réalisé dans le cadre de ma première année de DUT MMi. Un portrait chinois consiste à décrire notre caractère et nos goûts au travers d'analogies avec des choses que l'on aime et qui nous inspirent.<p>
+  <div class="acceuil">
 
+    <div class="text1">
+      <h1>Bonjour et bienvenue sur mon<br> portrait chinois !</h1>
+      <p>Je l'ai réalisé dans le cadre de ma première année de DUT MMi.<br> Un portrait chinois consiste à décrire notre
+        caractère et<br> nos goûts au travers d'analogies avec des choses que<br> l'on aime et qui nous inspirent.<p>
+    </div>
 
+    <div class="rectangle_rouge">
+    </div>
 
+    <div class="rectangle_orange">
+    </div>
 
+    <div class="rectangle_jaune-foncé">
+    </div>
 
+    <div class="rectangle_jaune">
+    </div>
+
+  </div>
+
+  
+  <div class="page2">
+
+    <div class="text2">
+      <h1>Si j’étais un personnage de manga,<br> je serais Ayanokoji Kyotaka​ </h1>
+
+      <p>Ayanokoji Kyotaka est étudiant comme moi, c’est quelqu’un qui<br> est indépendant, il  aime mener une vie
+        paisible.<br> Il
+        représente pour moi le genre de  personnes idéale :<br>
+        il est discret et cache très bien son jeu au yeux de tous.</p>
+    </div>
+  </div>
+
+  <div class="page3">
+
+    <div class="text3">
+      <h1>Si j’étais un oiseau, je serais un aigle </h1>
+
+      <p>Ayanokoji Kyotaka est étudiant comme moi, c’est quelqu’un qui<br> est indépendant, il  aime mener une vie
+        paisible.<br> Il
+        représente pour moi le genre de  personnes idéale :<br>
+        il est discret et cache très bien son jeu au yeux de tous.</p>
+    </div>
+  </div>
+
+  <div class="page4">
+
+    <div class="text4">
+      <h1>Si j’étais une marque,  je serais Apple Inc</h1>
+
+      <p>Ayanokoji Kyotaka est étudiant comme moi, c’est quelqu’un qui<br> est indépendant, il  aime mener une vie
+        paisible.<br> Il
+        représente pour moi le genre de  personnes idéale :<br>
+        il est discret et cache très bien son jeu au yeux de tous.</p>
+    </div>
+  </div>
+
+  <div class="page5">
+
+    <div class="text5">
+      <h1>Si j’étais une voiture , je serais une Tesla</h1>
+
+      <p>Ayanokoji Kyotaka est étudiant comme moi, c’est quelqu’un qui<br> est indépendant, il  aime mener une vie
+        paisible.<br> Il
+        représente pour moi le genre de  personnes idéale :<br>
+        il est discret et cache très bien son jeu au yeux de tous.</p>
+    </div>
+  </div>
+
+  <div class="page6">
+
+    <div class="text6">
+      <h1>Si j'étais un objet je serais un smartphone</h1>
+
+      <p>Ayanokoji Kyotaka est étudiant comme moi, c’est quelqu’un qui<br> est indépendant, il  aime mener une vie
+        paisible.<br> Il
+        représente pour moi le genre de  personnes idéale :<br>
+        il est discret et cache très bien son jeu au yeux de tous.</p>
+    </div>
+  </div>
+
+  <div class="page7">
+
+    <div class="text7">
+      <h1>Si j’étais un plat à déguster je serais un steak-frite​ </h1>
+
+      <p>Ayanokoji Kyotaka est étudiant comme moi, c’est quelqu’un qui<br> est indépendant, il  aime mener une vie
+        paisible.<br> Il
+        représente pour moi le genre de  personnes idéale :<br>
+        il est discret et cache très bien son jeu au yeux de tous.</p>
+    </div>
+  </div>
+
+  <div class="page8">
+
+    <div class="text8">
+      <h1>Si je serais un ninja jes serais le légendaire Itachi Uchiwa</h1>
+
+      <p>Ayanokoji Kyotaka est étudiant comme moi, c’est quelqu’un qui<br> est indépendant, il  aime mener une vie
+        paisible.<br> Il
+        représente pour moi le genre de  personnes idéale :<br>
+        il est discret et cache très bien son jeu au yeux de tous.</p>
+    </div>
+  </div>
 </body>
-
+</body>
 </html>
