--- a/index.html
+++ b/index.html
@@ -60,10 +60,8 @@
     <div class="text3">
       <h1>Si j’étais un oiseau, je serais un aigle </h1>
 
-      <p>Ayanokoji Kyotaka est étudiant comme moi, c’est quelqu’un qui<br> est indépendant, il  aime mener une vie
-        paisible.<br> Il
-        représente pour moi le genre de  personnes idéale :<br>
-        il est discret et cache très bien son jeu au yeux de tous.</p>
+      <p>L’ aigle est l’oiseau le plus majestueux, il represente pour moi la liberte, c’est un etre solitaire qui parcourt le monde, l’aigle est pour moi l’oiseau roi. Grace a ses griffes acérées, ces proies ne sont que des amuses gueule. Enfin il represente pour nous  le rêve de tout homme : 
+        celui de travesrer les cieux.</p>
     </div>
   </div>
 
@@ -72,10 +70,12 @@
     <div class="text4">
       <h1>Si j’étais une marque,  je serais Apple Inc</h1>
 
-      <p>Ayanokoji Kyotaka est étudiant comme moi, c’est quelqu’un qui<br> est indépendant, il  aime mener une vie
-        paisible.<br> Il
-        représente pour moi le genre de  personnes idéale :<br>
-        il est discret et cache très bien son jeu au yeux de tous.</p>
+      <p>Apple est une des plus classe pour moi, elle représente la qualité ,
+        la sobriété, la finesse du design, la simplicité et avant tout, la stabilité. Cette marque donne le sentiment d’être previlégié, alors 
+        que ce n’est qu’une impression. Enfin si vous devenez l’heureux
+        propriétaire d’un de leurs produits vous obtiendrez alors
+        une expérience utlime de satisfaction. Voila ce qui en fait 
+        pour moi la marque avec l’expérience utilisateur ultime.</p>
     </div>
   </div>
 
@@ -84,10 +84,15 @@
     <div class="text5">
       <h1>Si j’étais une voiture , je serais une Tesla</h1>
 
-      <p>Ayanokoji Kyotaka est étudiant comme moi, c’est quelqu’un qui<br> est indépendant, il  aime mener une vie
-        paisible.<br> Il
-        représente pour moi le genre de  personnes idéale :<br>
-        il est discret et cache très bien son jeu au yeux de tous.</p>
+      <p>Pourquoi tesla ? Parce que c’est cool ! . La voiture incontournable
+        à posseder si vous en avait l’occasion aujourd’hui est une Tesla .
+        C’est la voiture par excellence que tous fans de technologie devrait 
+        avoir. C’est litteralement un Iphone sur roue, qui de mieux qu’un téléphone sur roue peut être notre meilleure ami. Une fois assis 
+        à son bord vous ne faites plus qu’un avec elle. Se met ainsi en route une douce melodie, celui du silence qui contraste avec 
+        le déluge extérieur de frustration des gens énervés dans 
+        les bouchons alors que vous êtes tranquillement 
+        positionner sur votre fauteuil ambulant à écouter 
+        la douce symphonie du duo de frères “PNL”.</p>
     </div>
   </div>
 
@@ -96,10 +101,9 @@
     <div class="text6">
       <h1>Si j'étais un objet je serais un smartphone</h1>
 
-      <p>Ayanokoji Kyotaka est étudiant comme moi, c’est quelqu’un qui<br> est indépendant, il  aime mener une vie
-        paisible.<br> Il
-        représente pour moi le genre de  personnes idéale :<br>
-        il est discret et cache très bien son jeu au yeux de tous.</p>
+      <p>parce que je suis ton meilleur ami, toi qui m’utilise tous les jours ou que tu soies, n’importe quand, je  serai toujours la pour t’accompagner dans tes moments de joie, comme dans tes moment de tristesse quand tu te fait larguer par ta copine qui te quitte à cause de tes chaussettes avec des dessins de cafards.Ta sans doute pu le remarquer, je suis aussi ton couteaux suisse, je peux te prendre en photo et te couper 
+        du monde grâce a l’incroyable mode-avion.  
+        </p>
     </div>
   </div>
 
@@ -108,10 +112,9 @@
     <div class="text7">
       <h1>Si j’étais un plat à déguster je serais un steak-frite​ </h1>
 
-      <p>Ayanokoji Kyotaka est étudiant comme moi, c’est quelqu’un qui<br> est indépendant, il  aime mener une vie
-        paisible.<br> Il
-        représente pour moi le genre de  personnes idéale :<br>
-        il est discret et cache très bien son jeu au yeux de tous.</p>
+      <p>Parce que le raffinement de la viande et sa tendresse s’accorde de façon si savoureuse  avec le croustillant des frites que sa m’en donne la chair de poule. Et alors si vous rajouter le doux-couple de sauce ketchup-mayonnaise le voyage  culinaire arrive à un tel point d'excellence que vous vous retrouverez démunie de toute notion du temps. Hélas nombreux son ceux qui s’en retrouve emprisonné 
+        de ce plat de jouvence.     
+        </p>
     </div>
   </div>
 
@@ -120,10 +123,8 @@
     <div class="text8">
       <h1>Si je serais un ninja jes serais le légendaire Itachi Uchiwa</h1>
 
-      <p>Ayanokoji Kyotaka est étudiant comme moi, c’est quelqu’un qui<br> est indépendant, il  aime mener une vie
-        paisible.<br> Il
-        représente pour moi le genre de  personnes idéale :<br>
-        il est discret et cache très bien son jeu au yeux de tous.</p>
+      <p>( Personnage du manga Naruto Shippuden), le célèbre et le meilleur ninja de tous les  temps appartenant au village caché de Konoha. Il représente à lui seul le courage,  l’audace, la haine, le sacrifice , la stratégie ( c'était le plus grand  stratège de tous les temps ). Il est selon moi l’incarnation même de  l’illusion grâce à ses pupilles ( sharingan ) qui deviennent rouge et qui lui confère le plus puissant genjutsu 
+        ( technique ninja d’illusions ). </p>
     </div>
   </div>
 </body>
