horizontal scroll problem

--- a/index.html
+++ b/index.html
@@ -84,15 +84,7 @@
     <div class="text5">
       <h1>Si j’étais une voiture , je serais une Tesla</h1>
 
-      <p>Pourquoi tesla ? Parce que c’est cool ! . La voiture incontournable
-        à posseder si vous en avait l’occasion aujourd’hui est une Tesla .
-        C’est la voiture par excellence que tous fans de technologie devrait 
-        avoir. C’est litteralement un Iphone sur roue, qui de mieux qu’un téléphone sur roue peut être notre meilleure ami. Une fois assis 
-        à son bord vous ne faites plus qu’un avec elle. Se met ainsi en route une douce melodie, celui du silence qui contraste avec 
-        le déluge extérieur de frustration des gens énervés dans 
-        les bouchons alors que vous êtes tranquillement 
-        positionner sur votre fauteuil ambulant à écouter 
-        la douce symphonie du duo de frères “PNL”.</p>
+      <p>Pourquoi tesla ? Parce que c’est cool ! . La voiture incontournable à posseder si vous en avait l’occasion aujourd’hui est une Tesla. C’est la voiture par excellence que tous fans de technologie devrait avoir. C’est litteralement un Iphone sur roue, qui de mieux qu’un téléphone sur roue peut être notre meilleure ami. Une fois assisà son bord vous ne faites plus qu’un avec elle. Se met ainsi en route une douce melodie, celui du silence qui contraste avec le déluge extérieur de frustration des gens énervés dans les bouchons alors que vous êtes tranquillement positionner sur votre fauteuil ambulant à écouter la douce symphonie du duo de frères “PNL”.</p>
     </div>
   </div>
 
