--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
     <div class="text3">
       <h1>Si j’étais un oiseau, je serais un aigle </h1>
 
-      <p>L’ aigle est l’oiseau le plus majestueux, il represente pour moi la liberte, c’est un etre solitaire qui parcourt le monde, l’aigle est pour moi l’oiseau roi. Grace a ses griffes acérées, ces proies ne sont que des amuses gueule. Enfin il represente pour nous  le rêve de tout homme : 
+      <p>L’ aigle est l’oiseau le plus majestueux, il represente pour moi la liberte, c’est un etre solitaire qui
+        parcourt le monde, l’aigle est pour moi l’oiseau roi. Grace a ses griffes acérées, ces proies ne sont que des
+        amuses gueule. Enfin il represente pour nous le rêve de tout homme :
         celui de travesrer les cieux.</p>
     </div>
   </div>
