--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="rectangle_orange">
     </div>
 
-    <div class="rectangle_jaune-foncé">
+    <div class="rectangle_jaune-fonce">
     </div>
 
     <div class="rectangle_jaune">
